<resources>
    <string name="app_name">Online Congress</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mateus Andrés</string>
    <string name="nav_header_subtitle">mateus@mnm.team</string>
    <string name="nav_header_desc">mnm.team/mateus</string>
    <string name="seleccione_su_nueva_ciudad">Seleccione su nueva ciudad</string>
    <string name="ingresar_al_congreso">Ingresar al congreso</string>
    <string name="logo_del_congreso">Logo del congreso</string>
    <string name="seleccione_un_congreso">Seleccione un congreso:</string>
    <string name="congreso">CONGRESO VIRTUAL</string>
    <string name="comenzar">Comenzar</string>
    <string name="presionando_comenzar">Presionando \'Comenzar\', acepta los términos y condiciones de uso de la aplicación Online Congress</string>
    <string name="logo_de_online_congress">Logo de Online Congress</string>
    <string name="_2019_mnm_gridsoa">©2019, MNM - GRIDSOA</string>
    <string name="mateus">Mateus</string>
    <string name="asiste_a">Asiste a múltiples congresos virutales con:</string>
    <string name="participa">¡Participa ahora!</string>
    <string name="software_para_congresos">Software para congresos virtuales de investigación.</string>
    <string name="restablecer_contrase_a">Restablecer contraseña</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="correo_electr_nico_de_su_cuenta">Correo electrónico de su cuenta</string>
    <string name="ha_olvidado_su_contrase_a">¿Ha olvidado su contraseña? Ingrese su dirección de correo electrónico. Recibirá un mail para establecer una contraseña nueva.</string>
    <string name="recuperar_cuenta_asistente">RECUPERAR CUENTA (Asistente)</string>
    <string name="olvid_su_contrase_a">¿Olvidó su contraseña?</string>
    <string name="reg_strese_aqu">REGÍSTRESE AQUÍ</string>
    <string name="contrase_a">Contraseña</string>
    <string name="id_o_correo_electr_nico">ID o Correo electrónico</string>
    <string name="iniciar_sesi_n_asistente">INICIAR SESIÓN (Asistente)</string>
    <string name="mateus_byuwur_mnm">Mateus [byUwUr] - MNM</string>
    <string name="info">INFO.</string>
    <string name="foro">FORO</string>
    <string name="autor">AUTOR(ES)</string>
    <string name="registrarse_asistente">REGISTRARSE (Asistente)</string>
    <string name="registrar">Registrar</string>
    <string name="acepto_t_rminos">Acepto Términos y Condiciones para registrarme como asistente de Online Congress</string>
    <string name="documento_de_identidad">Documento de identidad</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="verificar_contrase_a">Verificar contraseña</string>
    <string name="c_d_pa_s_tel_fono">(+cód. país) Teléfono</string>
    <string name="instituci_n_educativa">Institución educativa</string>
    <string name="pa_s_provincia_ciudad_e_instituci_n">País, Provincia, Ciudad e Institución</string>
    <string name="nombres_y_apellidos">Nombres y apellidos</string>
    <string name="nombre_actual">Nombre actual</string>
    <string name="editar">Editar</string>
    <string name="cambiar">Cambiar</string>
    <string name="imagen">Imagen</string>
    <string name="cambiar_foto_de_perfil">Cambiar foto de perfil</string>
    <string name="foto">Foto</string>
    <string name="ciudad_actual">Ciudad actual</string>
    <string name="ciudad">Ciudad</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="g_nero">Género</string>
    <string name="masculino_femenino">Masculino/Femenino</string>
    <string name="sexo">Sexo</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="asterisc">**********</string>
    <string name="seguridad">Seguridad</string>
    <string name="tel_fono_actual">Teléfono actual</string>
    <string name="tel_fono">Teléfono</string>
    <string name="instituci_n">Institución</string>
    <string name="congresos">Congreso</string>
    <string name="correo_electr_nico_actual">Correo electrónico actual</string>
    <string name="correo_correo_com">correo@correo.com</string>
    <string name="correo">Correo</string>
    <string name="identidad">Identidad</string>
    <string name="n_identidad">Número de identidad</string>
    <string name="enviar_comentario">Enviar comentario</string>
    <string name="mensaje">Mensaje</string>
    <string name="feed_msg">El correo de la sesión actual será el utilizado para que el equipo de Online Congress se comunique con usted. A continuación, envíe su mensaje en el campo debajo.</string>
    <string name="enviar_como_correo">Enviar como:  Correo:</string>
    <string name="dni_nuevo">DNI nuevo</string>
    <string name="correo_electr_nico_nuevo">Correo electrónico nuevo</string>
    <string name="instituci_n_educativa_nueva">Institución educativa nueva</string>
    <string name="nombre_nuevo">Nombre nuevo</string>
    <string name="apellido_nuevo">Apellido nuevo</string>
    <string name="verificar_contrase_a_nueva">Verificar contraseña nueva</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="c_d_pa_s_n_mero_telef_nico_nuevo">(+cód. país) Número telefónico nuevo</string>
    <string name="andr_s_trujillo_mateus">Andrés Trujillo Mateus</string>
    <string name="others">Angie Daniela Velasquez\nJose Luis Rodríguez Galeano (Asesor)\nNayibe Soraya Sánchez León (Investigadora)\nMelissa Rivera Guzmán (Investigadora)</string>
    <string name="_1_0">1.0</string>
    <string name="versi_n">Versión:</string>
    <string name="congresos_y_eventos_de_investigaci_n">Congresos y eventos de investigación</string>
    <string name="no_hay_recursos">No hay recursos disponibles en este instante. Intente recargar más tarde.</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="e_mail">E-mail</string>
    <string name="fecha">Fecha</string>
    <string name="notificaci_n">Notificación</string>
    <string name="t_tulo_de_la_ponencia">Título de la ponencia</string>
    <string name="resumen">Resumen:</string>
    <string name="instituci_n_patrocinadora">Institución patrocinadora:</string>
    <string name="idioma">Idioma:</string>
    <string name="categor_a">Categoría:</string>
    <string name="fechas">Fecha:</string>
    <string name="nombre">Nombre</string>
    <string name="nivel_acad_mico">Nivel académico</string>
    <string name="contactar_en_whatsapp">CONTACTAR EN WHATSAPP</string>
    <string name="pa_s">País</string>
    <string name="resume">Resumé:</string>
    <string name="foto_del_autor">Foto del ponente o conferencista</string>
    <string name="imagen_de_la_ponencia">Imagen de la ponencia o conferencia</string>
    <string name="t_tulo">Título</string>
    <string name="id">ID:</string>
    <string name="ponencias">Ponencias</string>
    <string name="conferencias">Conferencias</string>
    <string name="categor_as">Categorías</string>
    <string name="agenda">Agenda</string>
    <string name="sobre_el_congreso">Sobre el congreso</string>
    <string name="perfil">Perfil</string>
    <string name="modificar_cuenta">Modificar cuenta</string>
    <string name="ayuda_y_comentarios">Ayuda y comentarios</string>
    <string name="equipo">Equipo</string>
    <string name="t_rminos_y_condiciones">Términos y condiciones</string>
    <string name="informaci_n_de_la_versi_n">Información de la versión</string>
    <string name="salir">Salir</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="cambiar_congreso">Cambiar congreso</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="tipo">tipo</string>
</resources>